<?xml version="1.0"?>
<package>
  <name>turtlebot2_capabilities</name>
  <version>0.0.0</version>
  <description>The turtlebot2_capabilities package</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/turtlebot2_capabilities</url>
  <url type="repository">https://github.com/osrf/turtlebot2_capabilities</url>
  <url type="bugtracker">https://github.com/osrf/turtlebot2_capabilities/issues</url>

  <author email="william@osrfoundation.org">William Woodall</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>capabilities</run_depend>
  <run_depend>std_capabilities</run_depend>

  <export>
    <capability_interface>
      interfaces/TB2Bringup.yaml
    </capability_interface>
    <capability_provider>
      providers/tb2_bringup.yaml
    </capability_provider>
    <capability_provider>
      providers/tb2_differential_mobile_base.yaml
    </capability_provider>
    <capability_provider>
      providers/tb2_fake_laser_sensor.yaml
    </capability_provider>
    <capability_provider>
      providers/tb2_kinect_rgbd_sensor.yaml
    </capability_provider>

  </export>
</package>